Refactor some gradle config for integ tests